--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Puff's quote">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
+    <title>ERA</title>
 </head>
-    <body>
-        <p>It's so sad that Steve Jobs died of Ligma.</p><br>
-        <p>Who the hell is Steve Jobs?</p><br>
-        <p>Ligma Balls.</p>
-    </body>
+<body>
+    <div class="wrapper">
+        <h1>"Don't worry, we have ERA."" - sub2_puffypuff</h1>
+        <h2>The T-80 is a main battle tank (MBT) that was designed and manufactured in the former Soviet Union and manufactured in Russia. The T-80 is based on the T-64, while incorporating features from the later T-72. The chief designer of the T-80 was Soviet engineer Nikolay Popov. When it entered service in 1976, it was the second MBT in the world to be equipped with a gas turbine engine, after the Swedish Stridsvagn 103, and the first production tank to use it as a main propulsion engine (the first tank to use a gas turbine as a main engine was the prototype British Conqueror FV200 Turbine Test Vehicle). The T-80U was last produced in 2001 in a factory in Omsk, Russia.</h2>
+    </div>
+    <img src="assets/puff.webp" alt="puff" loading="lazy">
+    <video id="vd-bg"></video>
+</body>
 </html>
